Big Data Engineer - IntelliPro Group Inc. - Career Page. Freedom Financial Network Careers - Data Engineer. Nine Senior Data Engineer | SmartRecruiters. Lead Data Engineer - Cover - Career Page. Job Application for 1713323 - Big Data Engineer at Altisource.       Data Engineer - OpenClassrooms     . Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters. Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters. TitanData Inc. Sr. Big Data Engineer | SmartRecruiters. Broadridge Senior Cloud Data Engineer (Contract) | SmartRecruiters. Rescale - Senior Data Engineer. Associate Director, Data Engineering - Assembly - Career Page. CapTech Consulting Senior Data Engineer | SmartRecruiters. Software Data Engineer - Levelset - Career Page. Software Data Engineer - Levelset - Career Page. Data Engineer - Ritchie Bros. Careers. Senior Data Engineer - graze.com - Career Page. ServiceNow Careers - Data Engineer. Biogen Data Engineer - Developer, Data Access Delivery | SmartRecruiters. Devoteam Data Engineer | SmartRecruiters. VISIAN Data Engineer | SmartRecruiters. Adevinta Data Engineer / Equipe recommandation F-H | SmartRecruiters. Adevinta Data Engineer F-H | SmartRecruiters. Bosch Group Data Engineer, Engineering Center Cluj | SmartRecruiters. Job @ REK-Swiss (Zürich): AWS Data Engineer ETL-da... | JOIN. Job Application for Data Engineering Manager at Starry. Job Application for Data Engineering Manager at Starry. Devoteam Data Engineering Consultant | SmartRecruiters. Upstox - Data Engineer. KSM Consulting Data Engineer | SmartRecruiters. GF Health Products, Inc. Data Engineer | SmartRecruiters. Senior Data Engineer | Averity. Lead Data Engineer | Averity. Mindshare Careers - Data Engineer, Marketing Sciences. Software Data Engineering Manager - Welltok - Career Page. NGData - Big Data Engineer. Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters. Tucows Careers - Data Engineer. Simply Business - Junior D

--- a/data-engineer.html
+++ b/data-engineer.html
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266353-data-engineer-engineering-center-cluj'>Bosch Group Data Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698266353-data-engineer-engineering-center-cluj'>Bosch Group Data Engineer, Engineering Center Cluj | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cluj-Napoca, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -244,7 +244,7 @@ Engineering. Upload a file. Use Dropbox?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698222148-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -317,7 +317,7 @@ Individuals seeking employment at Hinge are considered without regards to race,
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SmarterAgent/743999697837444-market-leading-saas-real-estate-platform-senior-level-data-engineer-90k-160k'>Smarter Agent Market Leading SAAS Real Estate Platform ? Senior Level Data Engineer - $90K - $160K | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SmarterAgent/743999697837444-market-leading-saas-real-estate-platform-senior-level-data-engineer-90k-160k'>Smarter Agent Market Leading SAAS Real Estate Platform ? Senior Level Data Engineer - $90K - $160K | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -411,7 +411,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Toronto, ON</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://clark.join.com/jobs/452119-data-engineer-m-f-x'>Job @ Clark Germany (Frankfurt): Data Engineer (m/... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://clark.join.com/jobs/452119-data-engineer-m-f-x'>Job @ Clark Germany (Frankfurt): Data Engineer (m/... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -447,7 +447,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hinge94/jobs/4490876002'>Job Application for Data Engineer at Hinge</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -471,7 +471,7 @@ Data Engineer Job in London ?55K-?70K</a></h5>
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697977065-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697977065-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
